animated nav bar and added spinning cube animation

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
 
         <!-- NAVBAR  -->
-        <ul id="navbar">
-            <li>Home</li>
-            <li>About</li>
+        <ul id="navbar" >
+            <a href="#about">Home</a>
+            <a href="#cube-container">About</a>
             <li>Portfolio</li>
             <li>Contact</li>
         </ul>
@@ -25,6 +25,19 @@
             <h1><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">K</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">e</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">l</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">v</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">i</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">C</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">h</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">a</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span></h1>
             <p><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Hi!</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">I'm</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">an</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">upcoming</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Software</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Developer</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">in</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">California</span></p>
             <p id="triangle" onmouseover="addShadow(this)" onmouseout="removeShadow(this)">∇</p>
+
+            <div id="cube-container2">
+                <div class="cube2">
+                    <div class="top2"></div>
+                    <div>
+                        <span style="--i:0;"></span>
+                        <span style="--i:1;"></span>
+                        <span style="--i:2;"></span>
+                        <span style="--i:3;"></span>
+                    </div>
+                </div>
+            </div>
+    
         </div>
 
         <h2><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">W</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">l</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">c</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">o</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">m</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">!</span></h2>
