--- a/index.html
+++ b/index.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Montserrat&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <title>Personal Portfolio</title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Montserrat&family=Roboto:ital,wght@1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Personal Portfolio</title>
+</head>
 
-        <!-- NAVBAR  -->
-        <ul id="navbar" >
-            <a href="#about">Home</a>
-            <a href="#cube-container">About</a>
-            <li>Portfolio</li>
-            <li>Contact</li>
-        </ul>
+<body>
 
-        <div id="about">
-            <h1><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">K</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">e</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">l</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">v</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">i</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">C</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">h</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">a</span><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span></h1>
-            <p><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Hi!</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">I'm</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">an</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">upcoming</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Software</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Developer</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">in</span> <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">California</span></p>
-            <p id="triangle" onmouseover="addShadow(this)" onmouseout="removeShadow(this)">∇</p>
+    <!-- NAVBAR  -->
+    <ul id="navbar">
+        <a href="#about">Home</a>
+        <a href="#cube-container">About</a>
+        <li>Portfolio</li>
+        <li>Contact</li>
+    </ul>
 
-            <div id="cube-container2">
-                <div class="cube2">
-                    <div class="top2"></div>
-                    <div>
-                        <span style="--i:0;"></span>
-                        <span style="--i:1;"></span>
-                        <span style="--i:2;"></span>
-                        <span style="--i:3;"></span>
-                    </div>
-                </div>
-            </div>
-    
-        </div>
+    <div id="about">
+        <h1><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">K</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">e</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">l</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">v</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">i</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">C</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">h</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">a</span><span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span></h1>
+        <p>
+            <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Hi!</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">I'm</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">an</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">upcoming</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Software</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Developer</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">in</span> <span
+                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">California</span>
+        </p>
+        <p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>
+        <h1>
+            <a href="" class="typewrite" data-period="2000"
+                data-type='[ "Full Stack Developer", "Front End Developer", "Back End Engineer", "Full Stack Software Engineer" ]'>
+                <span class="wrap"></span>
+            </a>
+        </h1>
+        <p id="triangle" onmouseover="addShadow(this)" onmouseout="removeShadow(this)">∇</p>
 
-        <h2><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">W</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">l</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">c</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">o</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">m</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">!</span></h2>
-        <div id="cube-container">
-            <div class="cube">
-                <div class="top"></div>
+        <div id="cube-container2">
+            <div class="cube2">
+                <div class="top2"></div>
                 <div>
                     <span style="--i:0;"></span>
                     <span style="--i:1;"></span>
@@ -53,8 +66,31 @@
             </div>
         </div>
 
+    </div>
+
+    <h2><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">W</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">l</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">c</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">o</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">m</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span
+            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">!</span></h2>
+    <div id="cube-container">
+        <div class="cube">
+            <div class="top"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
+        </div>
+    </div>
 
 
-        <script src="script.js"></script>
-    </body>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
