--- a/index.html
+++ b/index.html
@@ -18,45 +18,30 @@
 
     <!-- NAVBAR  -->
     <ul id="navbar">
-        <a href="#about">Home</a>
-        <a href="#cube-container">About</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
         <li>Portfolio</li>
         <li>Contact</li>
     </ul>
 
-    <div id="about">
-        <h1><span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">K</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">e</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">l</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">v</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">i</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">C</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">h</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">a</span><span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">n</span></h1>
-        <p>
-            <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Hi!</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">I'm</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">an</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">upcoming</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Software</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Developer</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">in</span> <span
-                onmouseover="addShadow(this)" onmouseout="removeShadow(this)">California</span>
-        </p>
-
+    <div id="home">
         <h1>
+            <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Kelvin</span>
+            <span onmouseover="addShadow(this)" onmouseout="removeShadow(this)">Chan</span>
+        </h1>
+
+        <h2>
             <a href="" class="typewrite" data-period="2000"
                 data-type='[ "Full Stack Developer", "Front End Developer", "Back End Engineer", "Full Stack Software Engineer" ]'>
                 <span class="wrap"></span>
             </a>
-        </h1>
+        </h2>
+
         <p id="triangle" onmouseover="addShadow(this)" onmouseout="removeShadow(this)">∇</p>
 
-        <div id="cube-container2">
-            <div class="cube2">
-                <div class="top2"></div>
+        <div id="cube-container">
+            <div class="cube">
+                <div class="top"></div>
                 <div>
                     <span style="--i:0;"></span>
                     <span style="--i:1;"></span>
@@ -68,25 +53,13 @@
 
     </div>
 
-    <h2><span onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">W</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">l</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">c</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">o</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">m</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">e</span><span
-            onmouseover="addWhiteShadow(this)" onmouseout="removeWhiteShadow(this)">!</span></h2>
-    <div id="cube-container">
-        <div class="cube">
-            <div class="top"></div>
-            <div>
-                <span style="--i:0;"></span>
-                <span style="--i:1;"></span>
-                <span style="--i:2;"></span>
-                <span style="--i:3;"></span>
-            </div>
-        </div>
+    <div id="about">
+        <h1>About Me</h1>
+        <div></div>
     </div>
+
+    
+    
 
 
 
