--- a/index.html
+++ b/index.html
@@ -55,7 +55,28 @@
 
     <div id="about">
         <h1>About Me</h1>
-        <div></div>
+        <div id="aboutMe">
+            <div>
+                <p>
+                    My name is Kelvin Chan, and I am a Full Stack Developer with a passion for crafting innovative, user-friendly applications. I have always been interested in technology and programming, and over the past year, I have gained extensive experience in software development through building personal web applications.
+                    As a Full Stack Developer, I have worked on a variety of projects that have allowed me to showcase my skills in both front-end and back-end development. I am proficient in languages like HTML, CSS, JavaScript, React, Node.js, and Python, and I am always eager to learn new technologies and stay up-to-date with the latest industry trends.
+                    I am committed to delivering high-quality work that meets my clients' needs and exceeds their expectations. I take pride in my ability to collaborate effectively with other developers and stakeholders to deliver the best possible results.
+                    When I'm not coding, you can find me rock climbing or hanging out with my family and friends. I believe that it's important to maintain a healthy work-life balance, and these activities help me stay energized and inspired.
+                    On this portfolio website, you'll find a selection of my best work, including web applications, software, and other projects that showcase my skills and expertise. I hope that you'll take the time to explore my website and see what I can do.
+                    Thank you for visiting, and I look forward to the opportunity to work with you!
+                </p>
+            </div>
+            <div>
+                <p>
+                    My name is Kelvin Chan, and I am a Full Stack Developer with a passion for crafting innovative, user-friendly applications. I have always been interested in technology and programming, and over the past year, I have gained extensive experience in software development through building personal web applications.
+                    As a Full Stack Developer, I have worked on a variety of projects that have allowed me to showcase my skills in both front-end and back-end development. I am proficient in languages like HTML, CSS, JavaScript, React, Node.js, and Python, and I am always eager to learn new technologies and stay up-to-date with the latest industry trends.
+                    I am committed to delivering high-quality work that meets my clients' needs and exceeds their expectations. I take pride in my ability to collaborate effectively with other developers and stakeholders to deliver the best possible results.
+                    When I'm not coding, you can find me rock climbing or hanging out with my family and friends. I believe that it's important to maintain a healthy work-life balance, and these activities help me stay energized and inspired.
+                    On this portfolio website, you'll find a selection of my best work, including web applications, software, and other projects that showcase my skills and expertise. I hope that you'll take the time to explore my website and see what I can do.
+                    Thank you for visiting, and I look forward to the opportunity to work with you!
+                </p>
+            </div>
+        </div>
     </div>
 
     
